--- a/src/main/resources/templates/newtaskform.html
+++ b/src/main/resources/templates/newtaskform.html
@@ -12,7 +12,7 @@
 <body>
 
 <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-    <a class="navbar-brand" href="#">Taskmanager</a>
+    <a class="navbar-brand" href="#" th:text="#{titlenavbar}"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -20,10 +20,10 @@
     <div class="collapse navbar-collapse" id="navbarsExampleDefault">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-                <a class="nav-link" th:href="@{/tasks}">Overview </a>
+                <a class="nav-link" th:href="@{/tasks}" th:text="#{overviewnavbar}"></a>
             </li>
             <li class="nav-item active">
-                <a class="nav-link" href="#">New<span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="#"th:text="#{newnavbar}"><span class="sr-only">(current)</span></a>
             </li>
         </ul>
     </div>
@@ -35,23 +35,23 @@
     <div class="starter-template">
         <form method="post" action="/tasks/new" th:object="${task}">
 
-            <h4>Add new task</h4>
+            <h4 th:text="#{newheadtitle}"></h4>
 
             <p th:text="${#fields.globalErrors()}"></p>
 
-            <label for="title">Title: </label>
+            <label for="title" th:text="#{newtitle}"></label>
             <input class="form-control" type="text" name="title" id="title" th:field="*{title}">
             <p th:errors="*{title}"></p>
 
-            <label for="description">Description: </label>
+            <label for="description" th:text="#{newdesc}"></label>
             <input class="form-control" type="text" name="description" id="description" th:field="*{description}">
             <p th:errors="*{description}"></p>
 
-            <label for="duedate">Due date: </label>
+            <label for="duedate" th:text="#{newduedate}"></label>
             <input class="form-control" type="datetime-local" name="duedate" id="duedate" th:field="*{duedate}">
             <p th:errors="*{duedate}"></p>
 
-            <input  class="btn btn-primary" type="submit" value="Add task">
+            <input  class="btn btn-primary" type="submit" th:value="#{newbtn}">
         </form>
     </div>
 
