--- a/src/main/resources/templates/taskoverview.html
+++ b/src/main/resources/templates/taskoverview.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-    <a class="navbar-brand" href="#">Taskmanager</a>
+    <a class="navbar-brand" href="#" th:text="#{titlenavbar}"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -19,10 +19,10 @@
     <div class="collapse navbar-collapse" id="navbarsExampleDefault">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-                <a class="nav-link" href="#">Overview <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="#" th:text="#{overviewnavbar}"><span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" th:href="@{/tasks/new}">New</a>
+                <a class="nav-link" th:href="@{/tasks/new}" th:text="#{newnavbar}"></a>
             </li>
         </ul>
     </div>
@@ -32,13 +32,13 @@
 <main role="main" class="container">
 
     <div class="starter-template">
-        <h1>Tasks</h1>
+        <h1 th:text="#{overviewtitle}"></h1>
 
         <table class="table table-striped">
             <thead>
             <tr>
-                <th scope="col">Title</th>
-                <th scope="col">Due date</th>
+                <th scope="col" th:text="#{overviewtablehead1}"></th>
+                <th scope="col" th:text="#{overviewtablehead2}"></th>
             </tr>
             </thead>
             <tbody>
