--- a/src/main/resources/templates/taskoverview.html
+++ b/src/main/resources/templates/taskoverview.html
@@ -24,6 +24,16 @@
             <li class="nav-item">
                 <a class="nav-link" th:href="@{/tasks/new}" th:text="#{newnavbar}"></a>
             </li>
+
+            <li class="nav-item">
+                <a class="nav-link" href="?lang=NL">NL</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="?lang=ENG">ENG</a>
+            </li>
+
+
+
         </ul>
     </div>
 </nav>
