--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -29,7 +29,9 @@
 <main role="main" class="container">
 
     <div class="starter-template">
-        <h2 th:text="${tasks.size()}"></h2>
+        <h2>You have:</h2>
+        <h1 th:text="${tasks.size()}"></h1>
+        <h2>Upcomming taks.</h2>
     </div>
 </main>
 
