--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -22,6 +22,13 @@
             <li class="nav-item">
                 <a class="nav-link" th:href="@{/tasks/new}">New</a>
             </li>
+
+            <li class="nav-item">
+                <a class="nav-link" href="?lang=NL">NL</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="?lang=ENG">ENG</a>
+            </li>
         </ul>
     </div>
 </nav>
