--- a/src/main/resources/templates/newtaskform.html
+++ b/src/main/resources/templates/newtaskform.html
@@ -25,6 +25,13 @@
             <li class="nav-item active">
                 <a class="nav-link" href="#"th:text="#{newnavbar}"><span class="sr-only">(current)</span></a>
             </li>
+
+            <li class="nav-item">
+                <a class="nav-link" href="?lang=NL">NL</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="?lang=ENG">ENG</a>
+            </li>
         </ul>
     </div>
 </nav>
