--- a/src/main/resources/templates/taskdescription.html
+++ b/src/main/resources/templates/taskdescription.html
@@ -26,6 +26,13 @@
             <li class="nav-item">
                 <a class="nav-link" href="#"th:text="#{newnavbar}"></a>
             </li>
+
+            <li class="nav-item">
+                <a class="nav-link" href="?lang=NL">NL</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="?lang=ENG">ENG</a>
+            </li>
         </ul>
     </div>
 </nav>
